kdepim4 (4:4.14.10-7) UNRELEASED; urgency=medium


 -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 23 Jul 2016 07:16:06 +0200

kdepim4 (4:4.14.10-6) unstable; urgency=medium

  * Drop kgapi build dependency.
    Thanks to Jeremy Bicha for the report (Closes: 830511)

 -- Maximiliano Curia <maxy@debian.org>  Wed, 13 Jul 2016 14:17:17 +0200

kdepim4 (4:4.14.10-5) unstable; urgency=low

  * Release to unstable.

 -- Maximiliano Curia <maxy@debian.org>  Thu, 07 Jul 2016 15:43:00 +0200

kdepim4 (4:4.14.10-4) unstable; urgency=low

  * Release to unstable.

 -- Maximiliano Curia <maxy@debian.org>  Mon, 04 Jul 2016 16:10:58 +0200

kdepim4 (4:4.14.10-3) experimental; urgency=medium

  * Rename source package to keep only knode and ktimetracker.
  * Migrate to the automatic dbgsym packages
  * Drop build depends indep
  * Drop link-grammar build dependency
  * Remove images installed by korganizer

 -- Maximiliano Curia <maxy@debian.org>  Tue, 28 Jun 2016 15:37:43 +0200

kdepim (4:4.14.10-2) unstable; urgency=medium

  * Team upload.
  * Add kdepim-mobileui-data Breaks/Replaces libmessageviewer4 (Closes:
    #788465)

 -- Scott Kitterman <scott@kitterman.com>  Thu, 03 Sep 2015 11:05:40 -0400

kdepim (4:4.14.10-1) unstable; urgency=medium

  * New upstream release (4.14.6).
  * New upstream release (4.14.7).
  * New upstream release (4.14.8).
  * New upstream release (4.14.9).
  * New upstream release (4.14.10).
  * Refresh patches.
  * Add libsoprano-dev build dep.
  * Update install files.
  * New patch: workaround_boost_moc_ftbfs

 -- Maximiliano Curia <maxy@debian.org>  Tue, 01 Sep 2015 17:05:10 +0200

kdepim (4:4.14.6-0ubuntu1) vivid; urgency=medium

  * New upstream release
  * Update watch file

 -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 13 Mar 2015 15:04:02 -0700

kdepim (4:4.14.5-1) experimental; urgency=medium

  * Prepare Debian release (upstream 4.14.5).
  * Bump Standards-Version to 3.9.6, no changes needed.