@@ -1,8 +1,0 @@
-begin 600 ox8-emblems-disabled.png
-MB5!.1PT*&@H````-24A$4@````@````("`8```#$#[Z+`````7-21T(`KLX<
-MZ0````9B2T=$`-H`V@#:W!Y7JP````EP2%ES```.Q```#L0!E2L.&P````=T
-M24U%!]H#`A8J(C!X=;P````X241!5!C38V`@`!@9&!@8;MVZ]1]=0DU-C9$!
-M21(#PS0QP73\__\?A88!)D)N(%X!(R,C"DVT+P`)>!H@LAM@1@````!)14Y$
-$KD)@@@``
-`
-end
