@@ -1,11 +1,0 @@
-begin 600 ox8-emblems-partdisabled.png
-MB5!.1PT*&@H````-24A$4@````@````("`8```#$#[Z+`````7-21T(`KLX<
-MZ0````9B2T=$`/\`_P#_H+VGDP````EP2%ES```!NP```;L!.NSCX@````=T
-M24U%!]H#`P@7*OI/7"\```#`241!5!C37<\Q2@-1`$71\R=FA@R**00MS"(D
-MS@*L1'`L=`D!&Q>1=;@(+>2#C9#**F!A8R^"V.O@)"3?0J+B+2^/"R_X0ZPE
-MA.HFV0X!9#"_S<5:.AP/$]+T)&AC_COH'LW`+.R&5:TX_G::ZXY82^W3SN?D
-M7)H_;K6QEF+-^U4F*T\7H)L4'Z]TBF6^JJR?+8582P>C4KG?:)<4&S3WI<EE
-M`R&#WG"3/G<76*.WU_]Y%M[&G<'T8?'L'U5E@)<O,%HZ18[=AL\`````245.
-%1*Y"8((`
-`
-end
